--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,4 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-
+async-graphql = "4.0"
+serde="1.0.228"
+serde_json="1.0.149"
+trpl = "0.3.0"
