--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,9 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-async-graphql = "4.0"
+actix-web = "4.5.1"
+async-graphql = "7.2.1"
+async-graphql-actix-web = "7.2.1"
 serde="1.0.228"
 serde_json="1.0.149"
 trpl = "0.3.0"
