--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,9 @@ edition = "2024"
 actix-web = "4.5.1"
 async-graphql = "7.2.1"
 async-graphql-actix-web = "7.2.1"
+aws-config = "1.8.13"
+aws-sdk-dynamodb = "1.103.0"
 serde="1.0.228"
 serde_json="1.0.149"
+tracing-subscriber = "0.3.22"
 trpl = "0.3.0"
