add transactions table

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,5 +11,7 @@ aws-config = "1.8.13"
 aws-sdk-dynamodb = "1.103.0"
 serde="1.0.228"
 serde_json="1.0.149"
+strum_macros = "0.27.2"
 tracing-subscriber = "0.3.22"
 trpl = "0.3.0"
+rand = "0.8.5"
