--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,5 @@ strum_macros = "0.27.2"
 tracing-subscriber = "0.3.22"
 trpl = "0.3.0"
 rand = "0.8.5"
+serde_dynamo = { version = "4", features = ["aws-sdk-dynamodb+1"] }
+anyhow = "1.0.101"
