refactor db to one table

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,3 +17,4 @@ trpl = "0.3.0"
 rand = "0.8.5"
 serde_dynamo = { version = "4", features = ["aws-sdk-dynamodb+1"] }
 anyhow = "1.0.101"
+chrono = "0.4.43"
