--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,14 +7,12 @@ edition = "2024"
 actix-web = "4.5.1"
 async-graphql = "7.2.1"
 async-graphql-actix-web = "7.2.1"
-aws-config = "1.8.13"
-aws-sdk-dynamodb = "1.103.0"
+bigdecimal = { version = "0.4", features = [ "serde-json" ] }
 serde="1.0.228"
 serde_json="1.0.149"
 strum_macros = "0.27.2"
-tracing-subscriber = "0.3.22"
 trpl = "0.3.0"
 rand = "0.8.5"
-serde_dynamo = { version = "4", features = ["aws-sdk-dynamodb+1"] }
 anyhow = "1.0.101"
 chrono = "0.4.43"
+sqlx = { version = "0.8", features = [ "runtime-tokio", "postgres", "migrate", "bigdecimal" ] }
