--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,8 @@
 services:
- dynamodb-local:
+ db:
    command: "-jar DynamoDBLocal.jar -sharedDb -dbPath ./data"
    image: "amazon/dynamodb-local:latest"
-   container_name: dynamodb-local
+   container_name: db
    ports:
      - "8000:8000"
    volumes:
@@ -13,16 +13,17 @@ services:
     interval: 10s
     timeout: 10s
     retries: 10
-#  rust-spike:
-#   container_name: rust-spike
-#   build:
-#     context: .
-#     dockerfile: Dockerfile
-#   depends_on:
-#     - dynamodb-local
-#   ports:
-#   - "8080:8080"
-#   environment:
-#     AWS_ACCESS_KEY_ID: 'DUMMYIDEXAMPLE'
-#     AWS_SECRET_ACCESS_KEY: 'DUMMYEXAMPLEKEY'
-#     AWS_REGION: 'eu-west-1'
+ rust-spike:
+  container_name: rust-spike
+  build:
+    context: .
+    dockerfile: Dockerfile
+  depends_on:
+    - db
+  ports:
+  - "8080:8080"
+  environment:
+    AWS_ACCESS_KEY_ID: 'DUMMYIDEXAMPLE'
+    AWS_SECRET_ACCESS_KEY: 'DUMMYEXAMPLEKEY'
+    AWS_REGION: 'eu-west-1'
+    ROLE: Admin
